plex-kube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex-server

---

apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex-server
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
   - name: tcp-32400
     protocol: TCP
     port: 32400
     targetPort: 32400
  selector:
    app: plex-server
status: {}
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  namespace: plex-server
spec:
  replicas: 2
  selector:
      matchLabels:
        app: plex-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex-server
    spec:
      containers:
      - env:
        - name: PLEX_GID
          value: "1001"
        - name: PLEX_UID
          value: "1001"
        - name: TZ
          value: "America/Sao_Paulo"
        - name: PLEX_CLAIM
          value: "claim-FKRucvRSh432mkzyyNkv"
        - name: ADVERTISE_IP
          value: "http://10.2.2.3:32400/"
        image: plexinc/pms-docker
        name: plex-server
        ports:
        - containerPort: 32400
        resources:
          limits:
            cpu: "4"
            memory: "4Gi"
          requests:
            cpu: "2"
            memory: "256Mi"
        volumeMounts:
        - mountPath: /data-01/
          name: plex-data-01
        - mountPath: /data-02/
          name: plex-data-02
        - mountPath: /data-03/
          name: plex-data-03
        - mountPath: /config
          name: plex-config
        - mountPath: /transcode
          name: plex-trans
      restartPolicy: Always
      volumes:
      - name: plex-data-01
        persistentVolumeClaim:
          claimName: plex-data-01-pvc
      - name: plex-data-02
        persistentVolumeClaim:
          claimName: plex-data-02-pvc
      - name: plex-data-03
        persistentVolumeClaim:
          claimName: plex-data-03-pvc
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex-config-pvc
      - name: plex-trans
        persistentVolumeClaim:
          claimName: plex-trans-pvc
status: {}

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: plex-ingressclass
  namespace: plex-server
spec:
  controller: nginx.org/ingress-controller 

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex-server
spec:
  defaultBackend:
    service:
      name: plex-service
      port:
        number: 32400
  ingressClassName: plex-ingressclass
  tls:
  - hosts:
    - plex.nb41.tech
    secretName: plex-secret
  rules:
  - host: plex.nb41.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-service
            port:
              number: 32400
